# jhc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: akali_hpp.h  jhc_all.hpp
include/akali_hpp/: arch.hpp  base64.hpp  buffer_queue.hpp  byteorder.hpp  cmd_line_parse.hpp  constructormagic.hpp  crc32.hpp  criticalsection.hpp  driver_info.hpp  event.hpp  file.hpp  file_info.hpp  file_util.hpp  filesystem.hpp  hex_encode.hpp  ini.hpp  ipaddress.hpp  json.hpp  macros.hpp  md5.hpp  memory_pool.hpp  noncopyable.hpp  os_ver.hpp  path_util.hpp  process.hpp  process_finder.hpp  process_util.hpp  registry.hpp  schedule_task.hpp  scoped_object.hpp  sha1.hpp  sha256.hpp  singleton.hpp  spdlog_wrapper.hpp  string_encode.hpp  string_helper.hpp  stringencode.hpp  thread.hpp  thread_pool.hpp  time_util.hpp  (+15 more)
include/jhc/: .clang-format  arch.hpp  base64.hpp  buffer_queue.hpp  byteorder.hpp  cmd_line_parse.hpp  config.hpp  config.hpp.in  crc32.hpp  enum_flags.hpp  event.hpp  file.hpp  file_info.hpp  filesystem.hpp  flags.hpp  hex_encode.hpp  ipaddress.hpp  json.hpp  macros.hpp  md5.hpp  memory_pool.hpp  optional.hpp  os_ver.hpp  path_util.hpp  process.hpp  process_finder.hpp  process_util.hpp  scoped_object.hpp  sha1.hpp  sha256.hpp  sha512.hpp  singleton.hpp  singleton_class.hpp  singleton_process.hpp  string_encode.hpp  string_helper.hpp  thread.hpp  thread_pool.hpp  time_util.hpp  timer.hpp  (+21 more)
include/jhc/impl/: allow_enum_flags.hpp  allow_flags.hpp  base64.cc  buffer_queue.cc  byteorder.cc  cmd_line_parse.cc  crc32.cc  enum_flagsfwd.hpp  enum_iterator.hpp  event.cc  file.cc  flagsfwd.hpp  hex_encode.cc  ipaddress.cc  iterator.hpp  md5.cc  path_util.cc  process.cc  process_util.cc  sha1.cc  sha256.cc  sha512.cc  singleton_process.cc  string_encode.cc  string_helper.cc  thread.cc  time_util.cc  timer.cc  trace.cc  url_encode.cc  uuid.cc  win_criticalsection.cc  win_env_variable.cc  win_http.cc  win_ini.cc  win_process_finder.cc  win_registry.cc  win_schedule_task.cc  win_service_helper.cc  win_shellink.cc  (+1 more)
test/: CMakeLists.txt  http_testcase.cpp  shellink_testcase.cpp  test.cpp  test.sln
test/msvc-test/: msvc-test.cpp  msvc-test.vcxproj  msvc-test.vcxproj.filters
test/win_lnks/: Postman.lnk  微信.lnk
